--- a/food-hunt/src/index.css
+++ b/food-hunt/src/index.css
@@ -1,12 +1,68 @@
-.header{
+.header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 1em;
+  border: 1px solid black
+}
+.logo {
+  width: 9em;
+}
+.nav-items {
+  padding:  0px 20px;
+}
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  margin: 5px;
+  padding: 5px;
+  width: 200px;
+}
+.res-card:hover {
+  cursor: pointer;
   border: 1px solid black;
 }
-.header-ul{
+.search {
+  padding: 10px
+}
+.res-logo {
+  width: 100%;
+}
+.filter-btn{
+  padding: 0.5em;
+  margin: 1em 0em;
+  cursor: pointer;
+}
+.shimmer-container{
   display: flex;
-  list-style: none;
-  gap: 20px; 
+  flex-wrap: wrap;
+}
+.shimmer-card{
+  width: 200px;
+  height: 300px;
+  background-color: #f0f0f0;
+  margin: 1em;
+}
+.login{
+  padding: 0 1em;
+}
+.filter{
+  display: flex;
+}
+.search{
+  padding: 0.5em;
+  margin: 1em 0em;
+}
+a{
+  text-decoration: none;
+  color: #000;
 }
